objects/ssot__PartyInterestTag__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Party Interest Tag Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InterestTagDefinitionId__c</fullName>
        <label>Interest Tag Definition</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyId__c</fullName>
        <label>Party</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761237428_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyInterestTag_InterestTagDefiniti_rel</label>
        <referenceTo>ssot__InterestTagDefinition__dlm</referenceTo>
        <relationshipLabel>PartyInterestTag_InterestTagDefiniti_rel</relationshipLabel>
        <relationshipName>rel_1697761237428_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761237504_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyInterestTag_PartyId_map_Party_I_rel</label>
        <referenceTo>ssot__Party__dlm</referenceTo>
        <relationshipLabel>PartyInterestTag_PartyId_map_Party_I_rel</relationshipLabel>
        <relationshipName>rel_1697761237504_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>